since version 1.6.3 release
===========================
 * build musllinux wheels (issue #307).
 * return empty array if one provided to date2num (issue #315).

version 1.6.3 (release tag v1.6.3rel)
=====================================
 * add support for formats without separators in strptime (e.g. '20200229', issue #301).
   This required removing support for > 4 digit years.
 * set the c_api_binop_methods compiler directive to True to retain Cython 0.x
   behavior for arithmetic operators for Cython >= 3.0.0 (issue #271).
 * support for python 3.12.

version 1.6.2 (release tag v1.6.2rel)
=====================================
 * num2date should not fail on an empty integer array (issue #287).
 * longdouble keyword in date2num so that a roundtrip from a time to a date
   and back again does not lose microsecond precision when the units require
   the times be encoded as floating point values (PR #284)
 * added strptime method (issue #277).
 * cibuildwheel wheel-building workflow added to github actions by @ocefpaf (triggers binary
   wheel builds and uploads to pypi automatically when GH release created). PR #290.

version 1.6.1 (release tag v1.6.1rel)
=====================================
 * fix failing tests on windows with numpy 1.23.0 (issue #278)
 * expose to_tuple module function in public API.

version 1.6.0 (release tag v1.6.0rel)
=====================================
 * fix for masked array inputs (issue #267).
 * improved performance of the num2date algorithm, in some cases providing
   an over 100x speedup (issue #269, PR#270).
 * fix for date2index for select != 'exact' when select='exact' works (issue
   #272, PR#273)

version 1.5.2 (release tag v1.5.2rel)
=====================================
 * silently change calendar='gregorian' to 'standard' internally,
   since 'gregorian' deprecated in CF v1.9 (issue #256).
 * add "is_leap_year" function (issue #259).
 * wheels that work on Apple M1 (arm64) available on pypi.

version 1.5.1.1
===============