@@ -2,6 +2,7 @@ since version 1.6.3 release
 ===========================
  * build musllinux wheels (issue #307).
  * return empty array if one provided to date2num (issue #315).
+ * handle nan/inf in num2date (issue #328).
 
 version 1.6.3 (release tag v1.6.3rel)
 =====================================
